# photos-wrapped

./: .gitignore  README.md  pyproject.toml  sample.hurl  schema.sql
alembic/versions/: 520fdc02788e_added_queue_table.py  87e493913b47_initialize_stats_tables.py
src/photos_wrapped/: config.py  convert.py  database.py  highlights_ml.py  main.py  photo_similarity.py  photos.py  playground.py  queue.py  stats.py
src/photos_wrapped/workers/: calculate_stats.py  compute_similarity_ml_worker.py
src/photos_wrapped/workers/adhoc/: compute_similarity_ml_adhoc.py
static/: 2.css  3.css  4.css  d3.js  main.css  plot.js
templates/: bento.jinja  go.jinja  index.jinja  loading.jinja  year.jinja
templates/present/: 0.jinja  1.jinja  2.jinja  3.jinja  4.jinja  base.jinja
